<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:text="@string/start_service_button"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/send_test_record_button"
        android:layout_marginBottom="178dp"
        android:text="@string/categories_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/get_categories_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/start_service_button"
        android:layout_marginEnd="29dp"
        android:text="@string/get_categories_button"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/stop_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start_service_button"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_service_button"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="389dp" />

    <Button
        android:id="@+id/send_test_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="93dp"
        android:text="@string/send_test_record_button" />

    <EditText
        android:id="@+id/e_mail_edit_text"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/categories"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail_hint" />

    <EditText
        android:id="@+id/token_edit_text"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/categories"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/token_hint" />

    <Button
        android:id="@+id/apply_credentials_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/send_test_record_button"
        android:layout_marginEnd="98dp"
        android:text="@string/apply_credentials_button" />

</RelativeLayout>