<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.RecordPostActivity">

    <Spinner
        android:id="@+id/categories_list_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/payment_amount_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categories_list_dropdown"
        android:text="@string/payment_amount_header" />

    <TextView
        android:id="@+id/payment_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/payment_amount_header_text_view"
        android:layout_marginStart="139dp"
        android:text="@string/payment_amount_placeholder" />

    <TextView
        android:id="@+id/sms_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/payment_amount_text_view"
        android:layout_alignTop="@+id/sms_message_header_text_view"
        android:text="@string/sms_text_header" />

    <TextView
        android:id="@+id/sms_message_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:text="@string/sms_text_header" />

    <Button
        android:id="@+id/post_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="132dp"
        android:text="@string/post_record_button" />
</RelativeLayout>